<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context="minhtvph26873.poly.pnlib.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/font_login"
            android:shadowColor="@color/white"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="@string/pnlib"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="45sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/ng_nh_p_v_i_t_c_ch"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_lgAdmin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white1"
            android:text="@string/admin"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_lgGuest"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white1"
            android:text="@string/th_th"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_hello"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/imv_logo"
            android:layout_marginTop="100dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/fpt_img"/>
        <TextView
            android:id="@+id/tv_mess"
            android:text="nhấn vào logo để tiếp tục"
            android:textAlignment="center"
            android:textSize="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>